Fınal Changes, Inıtial cards handled